--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <div class="main-contacts"> 
             <ul class="contacts"> 
             <li class="contacts-mail"><a href="mailto:info@devstudio.com"> 
-                <svg class="">
+                <svg class="contacts-mail-icon">
                     <use href="./images/icon.svg/symbol-defs.svg#icon-envelope"></use>
                 </svg>
                 <span class="contacts-mail-span">info@devstudio.com</span>
                 </a>
             </li>
             <li class="contacts-phone"><a href="tel:+1212-772-4150"> 
-                <svg class="">
+                <svg class="contacts-phone-icon">
                      <use href="./images/icon.svg/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 <span class="contacts-phone-span">+1 212-772-4150</span>
