--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <!--Logo-->
       <header class="global-header">
-        
+
         <nav class="main-logo">
             <ol class="logowebstudio" >
                 <a class="logowebstudio"href="index.html">Web<span class="logo-studio">Studio</span> </a>
@@ -38,14 +38,14 @@
             <ul class="contacts"> 
             <li class="contacts-mail"><a href="mailto:info@devstudio.com"> 
                 <svg class="contacts-mail-icon">
-                    <use href="./icons/symbol-defs.svg#icon-envelope"></use>
+                    <use href="https./icons/symbol-defs.svg#icon-envelope"></use>
                 </svg>
                 <span class="contacts-mail-span">info@devstudio.com</span>
                 </a>
             </li>
             <li class="contacts-phone"><a href="tel:+1212-772-4150"> 
                 <svg class="contacts-phone-icon">
-                     <use href="./icons/symbol-defs.svg#"></use>
+                     <use href="./icons/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 <span class="contacts-phone-span">+1 212-772-4150</span>
                 </a> 
