--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class="contacts"> 
             <li class="contacts-mail"><a href="mailto:info@devstudio.com"> 
                 <svg class="contacts-mail-icon">
-                    <use href="https./icons/symbol-defs.svg#icon-envelope"></use>
+                    <use href="./icons/symbol-defs.svg#icon-envelope"></use>
                 </svg>
                 <span class="contacts-mail-span">info@devstudio.com</span>
                 </a>
