--- a/index.html
+++ b/index.html
@@ -345,7 +345,41 @@
                 <li class="adress-footer"><a href="695 Park Ave, NY 10065, USA">695 Park Ave, NY 10065, USA</a></li>
                 <li class="contacts-footer"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="contacts-footer"><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+
             </ul>
+        </div>
+        <div class="global-footer-social-links">
+          <h3 class="find-us-icons">FIND US ON</h3>
+          <div class="icons-list">
+            <a href="https://instagram.com" class="icon" aria-label="Instagram">
+							<svg>
+								<use
+									href="./icons.svg/symbol-defs.svg#icon-instagram"
+								></use>
+							</svg>
+						</a>
+						<a href="https://twitter.com" class="icon" aria-label="Twitter">
+							<svg>
+								<use
+									href="./icons.svg/symbol-defs.svg#icon-twitter"
+								></use>
+							</svg>
+						</a>
+						<a href="https://facebook.com" class="icon" aria-label="Facebook">
+							<svg>
+								<use
+									href="./icons.svg/symbol-defs.svg#icon-facebook"
+								></use>
+							</svg>
+						</a>
+						<a href="https://linkedin.com" class="icon" aria-label="Linkedin">
+							<svg>
+								<use
+									href="./icons.svg/symbol-defs.svg#icon-linkedin"
+								></use>
+							</svg>
+						</a>
+          </div>
         </div>
    </footer>
 </div>
