--- a/portofolio.html
+++ b/portofolio.html
@@ -35,8 +35,20 @@
         <!--Mail Tel-->
         <div class="main-contacts"> 
             <ul class="contacts"> 
-               <li class="contacts-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-               <li class="contacts-phone"><a href="tel:+1212-772-4150">+1 212-772-4150</a> </li>
+            <li class="contacts-mail"><a href="mailto:info@devstudio.com"> 
+                <svg class="contacts-mail-icon">
+                     <use href="./icons/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                <span class="contacts-mail-span">info@devstudio.com</span>
+                </a>
+            </li>
+            <li class="contacts-phone"><a href="tel:+1212-772-4150"> 
+                <svg class="contacts-phone-icon">
+                     <use href="./icons/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                <span class="contacts-phone-span">+1 212-772-4150</span>
+                </a> 
+            </li>
             </ul>
          </div>
         
@@ -143,8 +155,40 @@
                         <li class="contacts-footer"><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
                     </ul>
                 </div>
+                <div class="global-footer-social-links">
+                  <h3 class="find-us-icons">FIND US ON</h3>
+                  <div class="icons-list">
+                    <a href="https://instagram.com" class="icon" aria-label="Instagram">
+                                    <svg>
+                                        <use
+                                            href="./icons.svg/symbol-defs.svg#icon-instagram"
+                                        ></use>
+                                    </svg>
+                                </a>
+                                <a href="https://twitter.com" class="icon" aria-label="Twitter">
+                                    <svg>
+                                        <use
+                                            href="./icons.svg/symbol-defs.svg#icon-twitter"
+                                        ></use>
+                                    </svg>
+                                </a>
+                                <a href="https://facebook.com" class="icon" aria-label="Facebook">
+                                    <svg>
+                                        <use
+                                            href="./icons.svg/symbol-defs.svg#icon-facebook"
+                                        ></use>
+                                    </svg>
+                                </a>
+                                <a href="https://linkedin.com" class="icon" aria-label="Linkedin">
+                                    <svg>
+                                        <use
+                                            href="./icons.svg/symbol-defs.svg#icon-linkedin"
+                                        ></use>
+                                    </svg>
+                                </a>
+                  </div>
+                </div>
            </footer>
         </div>
-
 </body>
 </html>
