--- a/index.html
+++ b/index.html
@@ -122,41 +122,30 @@
                 <p class="job">Product Designer</p>
                  <div class="icons-list" >
                     <a
-									href="https://instagram.com"
-									class="icon"
-									aria-label="Instagram"
-								>
+									href="https://instagram.com"class="icon"aria-label="Instagram">
 									<svg>
 										<use
-											href="./icons.svg/symbol-defs.svg#icon-instagram"
-										></use>
+											href="./icons.svg/symbol-defs.svg#icon-instagram"></use>
 									</svg>
 								</a>
-								<a href="https://twitter.com" class="icon" aria-label="Twitter">
+								<a href="https://twitter.com"class="icon" aria-label="Twitter">
 									<svg>
 										<use
-											href="./icons.svg/symbol-defs.svg#icon-twitter"
-										></use>
-									</svg> </a
-								><a
-									href="https://facebook.com"
-									class="icon"
-									aria-label="Facebook"
-								>
+											href="./icons.svg/symbol-defs.svg#icon-twitter"></use>
+									</svg> 
+                </a>
+                  <a
+									href="https://facebook.com"class="icon" aria-label="Facebook">
 									<svg>
 										<use
-											href="./icons.svg/symbol-defs.svg#icon-facebook"
-										></use>
-									</svg> </a
-								><a
-									href="https://linkedin.com"
-									class="icon"
-									aria-label="Linkedin"
-								>
+											href="./icons.svg/symbol-defs.svg#icon-facebook"></use>
+									</svg> 
+                </a>
+                <a
+									href="https://linkedin.com"class="icon" aria-label="Linkedin">
 									<svg>
 										<use
-											href="./icons.svg/symbol-defs.svg#icon-linkedin"
-										></use>
+											href="./icons.svg/symbol-defs.svg#icon-linkedin"></use>
 									</svg>
 								</a>
                  </div>
