Un alt commit inca o incercare 4

--- a/index.html
+++ b/index.html
@@ -125,27 +125,27 @@
 									href="https://instagram.com"class="icon"aria-label="Instagram">
 									<svg>
 										<use
-											href="./icons.svg/symbol-defs.svg#icon-instagram"></use>
+											href="./icons/symbol-defs.svg#icon-instagram"></use>
 									</svg>
 								</a>
 								<a href="https://twitter.com"class="icon" aria-label="Twitter">
 									<svg>
 										<use
-											href="./icons.svg/symbol-defs.svg#icon-twitter"></use>
+											href="./icons/symbol-defs.svg#icon-twitter"></use>
 									</svg> 
                 </a>
                   <a
 									href="https://facebook.com"class="icon" aria-label="Facebook">
 									<svg>
 										<use
-											href="./icons.svg/symbol-defs.svg#icon-facebook"></use>
+											href="./icons/symbol-defs.svg#icon-facebook"></use>
 									</svg> 
                 </a>
                 <a
 									href="https://linkedin.com"class="icon" aria-label="Linkedin">
 									<svg>
 										<use
-											href="./icons.svg/symbol-defs.svg#icon-linkedin"></use>
+											href="./icons/symbol-defs.svg#icon-linkedin"></use>
 									</svg>
 								</a>
                  </div>
