Un alt commit incercarea 5

--- a/index.html
+++ b/index.html
@@ -154,133 +154,100 @@
                 <h3 class="name">Kylie Evans</h3>
                 <p class="job">Frontend Developer</p>
                 <div class="icons-list" >
-                    <a
-									href="https://instagram.com"
-									class="icon"
-									aria-label="Instagram"
-								>
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-instagram"
-										></use>
-									</svg>
-								</a>
-								<a href="https://twitter.com" class="icon" aria-label="Twitter">
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-twitter"
-										></use>
-									</svg> </a
-								><a
-									href="https://facebook.com"
-									class="icon"
-									aria-label="Facebook"
-								>
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-facebook"
-										></use>
-									</svg> </a
-								><a
-									href="https://linkedin.com"
-									class="icon"
-									aria-label="Linkedin"
-								>
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-linkedin"
-										></use>
-									</svg>
-								</a>
-                 </div>
+                  <a
+                href="https://instagram.com"class="icon"aria-label="Instagram">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+              <a href="https://twitter.com"class="icon" aria-label="Twitter">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-twitter"></use>
+                </svg> 
+              </a>
+                <a
+                href="https://facebook.com"class="icon" aria-label="Facebook">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-facebook"></use>
+                </svg> 
+              </a>
+              <a
+                href="https://linkedin.com"class="icon" aria-label="Linkedin">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+               </div>
               </li>
               <li class="card-our-team">  <img src="images/ryan harris.jpg" alt="Marketing" width="270" height="260"/>
                 <h3 class="name">Ryan Harris</h3>
                 <p class="job">Marketing</p>
                 <div class="icons-list" >
-                    <a
-									href="https://instagram.com"
-									class="icon"
-									aria-label="Instagram"
-								>
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-instagram"
-										></use>
-									</svg>
-								</a>
-								<a href="https://twitter.com" class="icon" aria-label="Twitter">
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-twitter"
-										></use>
-									</svg> </a
-								><a
-									href="https://facebook.com"
-									class="icon"
-									aria-label="Facebook"
-								>
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-facebook"
-										></use>
-									</svg> </a
-								><a
-									href="https://linkedin.com"
-									class="icon"
-									aria-label="Linkedin"
-								>
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-linkedin"
-										></use>
-									</svg>
-								</a>
-                 </div>
+                  <a
+                href="https://instagram.com"class="icon"aria-label="Instagram">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+              <a href="https://twitter.com"class="icon" aria-label="Twitter">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-twitter"></use>
+                </svg> 
+              </a>
+                <a
+                href="https://facebook.com"class="icon" aria-label="Facebook">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-facebook"></use>
+                </svg> 
+              </a>
+              <a
+                href="https://linkedin.com"class="icon" aria-label="Linkedin">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+               </div>
               </li>
               <li class="card-our-team"> <img src="images/tyler moore.jpg" alt="UI Designer" width="270" height="260"/>
                 <h3 class="name">Tyler Moore</h3>
                 <p class="job">UI Designer</p>
                 <div class="icons-list" >
-                    <a
-									href="https://instagram.com"
-									class="icon"
-									aria-label="Instagram"
-								>
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-instagram"
-										></use>
-									</svg>
-								</a>
-								<a href="https://twitter.com" class="icon" aria-label="Twitter">
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-twitter"
-										></use>
-									</svg> </a
-								><a
-									href="https://facebook.com"
-									class="icon"
-									aria-label="Facebook"
-								>
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-facebook"
-										></use>
-									</svg> </a
-								><a
-									href="https://linkedin.com"
-									class="icon"
-									aria-label="Linkedin"
-								>
-									<svg>
-										<use
-											href="./icons.svg/symbol-defs.svg#icon-linkedin"
-										></use>
-									</svg>
-								</a>
-                 </div>
+                  <a
+                href="https://instagram.com"class="icon"aria-label="Instagram">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+              <a href="https://twitter.com"class="icon" aria-label="Twitter">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-twitter"></use>
+                </svg> 
+              </a>
+                <a
+                href="https://facebook.com"class="icon" aria-label="Facebook">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-facebook"></use>
+                </svg> 
+              </a>
+              <a
+                href="https://linkedin.com"class="icon" aria-label="Linkedin">
+                <svg>
+                  <use
+                    href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+               </div>
               </li>
            </ul>
          </section>
@@ -333,36 +300,35 @@
         </div>
         <div class="global-footer-social-links">
           <h3 class="find-us-icons">FIND US ON</h3>
-          <div class="icons-list">
-            <a href="https://instagram.com" class="icon" aria-label="Instagram">
-							<svg>
-								<use
-									href="./icons.svg/symbol-defs.svg#icon-instagram"
-								></use>
-							</svg>
-						</a>
-						<a href="https://twitter.com" class="icon" aria-label="Twitter">
-							<svg>
-								<use
-									href="./icons.svg/symbol-defs.svg#icon-twitter"
-								></use>
-							</svg>
-						</a>
-						<a href="https://facebook.com" class="icon" aria-label="Facebook">
-							<svg>
-								<use
-									href="./icons.svg/symbol-defs.svg#icon-facebook"
-								></use>
-							</svg>
-						</a>
-						<a href="https://linkedin.com" class="icon" aria-label="Linkedin">
-							<svg>
-								<use
-									href="./icons.svg/symbol-defs.svg#icon-linkedin"
-								></use>
-							</svg>
-						</a>
-          </div>
+          <div class="icons-list" >
+            <a
+          href="https://instagram.com"class="icon"aria-label="Instagram">
+          <svg>
+            <use
+              href="./icons/symbol-defs.svg#icon-instagram"></use>
+          </svg>
+        </a>
+        <a href="https://twitter.com"class="icon" aria-label="Twitter">
+          <svg>
+            <use
+              href="./icons/symbol-defs.svg#icon-twitter"></use>
+          </svg> 
+        </a>
+          <a
+          href="https://facebook.com"class="icon" aria-label="Facebook">
+          <svg>
+            <use
+              href="./icons/symbol-defs.svg#icon-facebook"></use>
+          </svg> 
+        </a>
+        <a
+          href="https://linkedin.com"class="icon" aria-label="Linkedin">
+          <svg>
+            <use
+              href="./icons/symbol-defs.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+         </div>
         </div>
    </footer>
 </div>
