--- a/portofolio.html
+++ b/portofolio.html
@@ -157,36 +157,35 @@
                 </div>
                 <div class="global-footer-social-links">
                   <h3 class="find-us-icons">FIND US ON</h3>
-                  <div class="icons-list">
-                    <a href="https://instagram.com" class="icon" aria-label="Instagram">
-                                    <svg>
-                                        <use
-                                            href="./icons.svg/symbol-defs.svg#icon-instagram"
-                                        ></use>
-                                    </svg>
-                                </a>
-                                <a href="https://twitter.com" class="icon" aria-label="Twitter">
-                                    <svg>
-                                        <use
-                                            href="./icons.svg/symbol-defs.svg#icon-twitter"
-                                        ></use>
-                                    </svg>
-                                </a>
-                                <a href="https://facebook.com" class="icon" aria-label="Facebook">
-                                    <svg>
-                                        <use
-                                            href="./icons.svg/symbol-defs.svg#icon-facebook"
-                                        ></use>
-                                    </svg>
-                                </a>
-                                <a href="https://linkedin.com" class="icon" aria-label="Linkedin">
-                                    <svg>
-                                        <use
-                                            href="./icons.svg/symbol-defs.svg#icon-linkedin"
-                                        ></use>
-                                    </svg>
-                                </a>
-                  </div>
+                  <div class="icons-list" >
+                    <a
+                  href="https://instagram.com"class="icon"aria-label="Instagram">
+                  <svg>
+                    <use
+                      href="./icons/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="https://twitter.com"class="icon" aria-label="Twitter">
+                  <svg>
+                    <use
+                      href="./icons/symbol-defs.svg#icon-twitter"></use>
+                  </svg> 
+                </a>
+                  <a
+                  href="https://facebook.com"class="icon" aria-label="Facebook">
+                  <svg>
+                    <use
+                      href="./icons/symbol-defs.svg#icon-facebook"></use>
+                  </svg> 
+                </a>
+                <a
+                  href="https://linkedin.com"class="icon" aria-label="Linkedin">
+                  <svg>
+                    <use
+                      href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+                 </div>
                 </div>
            </footer>
         </div>
